@@ -227,6 +227,30 @@ h5 {
     to {opacity: 1}
   }
 
+  #description-box {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8); /* trasparente ma scuro */
+    color: white;
+    font-size: 20px;
+    text-align: center;
+    padding: 20px;
+    z-index: 999; /* assicura che il riquadro di descrizione sia sopra tutto il resto */
+}
+
+.close-btn {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font-size: 24px;
+    cursor: pointer;
+    color: white;
+}
+
  
   .mobile-menu {
     display: none;
